# branchekode-dataset

./: .gitignore  README.md  download_google_cloud_bucket.py  evalueringsdata_add_titles.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.dist
