[project]
authors = [{name = "rasren", email = "rasren@erst.com"}]
name = "branchekode_selector"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["streamlit>=1.52.1,<2", "pandas", "gcsfs>=2025.12.0,<2026", "st-files-connection>=0.1.0,<0.2", "ipykernel>=7.1.0,<8", "datetime>=6.0,<7"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
branchekode_selector = { path = ".", editable = true }

[tool.pixi.tasks]
